<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PantallaPrincipal"
    android:paddingTop="50dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@mipmap/img1_foreground"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/main_orange"
        android:layout_gravity="center"
        android:text="@string/titulo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/lbl1"
            android:textSize="21dp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="20dp"
            android:textSize="21dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/lbl2"
            android:textSize="21dp" />

        <EditText
            android:id="@+id/editTextText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="20dp"
            android:textSize="21dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textView4"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/lbl3"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="20dp"
            android:textSize="21dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        android:layout_gravity="center"
        >


        <Button
            android:id="@+id/btnCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_crear"
            android:textColor="#FFFFFF"
            android:background="@color/main_orange"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />


    </LinearLayout>


</LinearLayout>